[package]
name = "foxglove"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"
bracket-lib = { version="0.8.7", features = ["specs", "serde", "threaded"]}
bracket-terminal = "0.8.7"
log = "0.4.17"
