[package]
name = "foxglove"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"
bracket-lib = { version="0.8.7", features = ["specs", "serde", "threaded"]}
bracket-terminal = "0.8.7"
crossterm = "0.25.0"
log = "0.4.17"
serde = "1.0.147"
signal-hook = "0.3.14"
tui = "0.19.0"
tui-image-rgba-updated = "0.2.2"
tui-input = "0.6.0"
tui-textarea = "0.2.0"
